--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">   
-  <div class="row">
+  <div class="row-fluid">
     <div class="col-md-12">
         <h3 class="text-center">Git Merger Utility</h3>
         <p>As one of the individuals reviewing and merging on large projects with extensive testsuites, you have probably noticed that merging takes time. A long time.</p>
